--- a/.gitignore
+++ b/.gitignore
@@ -146,3 +146,67 @@ out/production/Ass3/PL/PL_T/Functor\.class
 out/production/Ass3/PL/PL_T/insertHandlers/InsertPlace\.class
 
 out/production/Ass3/PL/PL_T/mainMenuHandlers/UpdateChoice\$updateFunctions\.class
+
+out/production/Ass3/BL/BL_T/Entities/DeliveryDestination\.class
+
+out/production/Ass3/BL/BL_T/Entities/LicenseTypeForTruck\.class
+
+out/production/Ass3/BL/BL_T/Entities/Order\.class
+
+out/production/Ass3/BL/BL_T/Entities/Place\.class
+
+out/production/Ass3/BL/BL_T/Entities/Truck\.class
+
+out/production/Ass3/BL/BL_T/Entities/TruckModel\.class
+
+out/production/Ass3/BL/BL_T/EntitiyFunctions/DriverLicenseFunctions\.class
+
+out/production/Ass3/BL/BL_T/EntitiyFunctions/ModelFunctions\.class
+
+out/production/Ass3/BL/BL_T/EntitiyFunctions/OrderFunctions\.class
+
+out/production/Ass3/BL/BL_T/EntitiyFunctions/TruckFunctions\.class
+
+out/production/Ass3/BL/BL_W/Entities_W/BankAccount\.class
+
+out/production/Ass3/BL/BL_W/Entities_W/Role\.class
+
+out/production/Ass3/BL/BL_W/Entities_W/Shift\.class
+
+out/production/Ass3/BL/BL_W/Entities_W/Shift\$ShiftDayPart\.class
+
+out/production/Ass3/BL/BL_W/Entities_W/Worker\.class
+
+out/production/Ass3/BL/BL_W/WorkerLogic\.class
+
+out/production/Ass3/DAL/DAL_T/LicenseForTruck\.class
+
+out/production/Ass3/DAL/DAL_T/Orders\.class
+
+out/production/Ass3/DAL/DAL_T/Places\.class
+
+out/production/Ass3/DAL/DAL_T/Trucks\.class
+
+out/production/Ass3/PL/MainMenus/TransportsMainMenu\.class
+
+out/production/Ass3/PL/MainMenus/TransportsMainMenu\$transportsMenuFunctions\.class
+
+out/production/Ass3/PL/PL_T/mainMenuHandlers/RemoveChoice\$removeFunctions\.class
+
+out/production/Ass3/PL/PL_T/mainMenuHandlers/RetrieveChoice\$retrieveFunctions\.class
+
+out/production/Ass3/PL/PL_T/mainMenuHandlers/UpdateChoice\.class
+
+out/production/Ass3/PL/PL_T/removeHandlers/RemoveDeliveryDestination\.class
+
+out/production/Ass3/PL/PL_T/removeHandlers/RemoveTruck\.class
+
+out/production/Ass3/PL/PL_T/updateHandlers/UpdateDelivery\.class
+
+out/production/Ass3/PL/PL_W/insertCommand/InsertWorker\.class
+
+out/production/Ass3/PL/PL_W/removeCommand/RemoveShift\.class
+
+out/production/Ass3/PL/PL_W/selectCommand/SelectShift\.class
+
+out/production/Ass3/PL/PL_W/utilCommands/mainMenuCommand\.class
